# ESP_project

./: README.md  license.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/it/unipd/dei/esp1617/patova/hdresp/: AutoFitTextureView.java  CameraActivity.java  CameraFragment.java  CameraPreferences.java  CameraSettings.java  ChangeFragment.java  ConfirmationDialogFragment.java  ErrorDialogFragment.java  GalleryFragment.java  Hdr.java  ImageSaver.java  InfoActivity.java  ProgressBarFragment.java  SettingsActivity.java  SettingsFragment.java
app/src/main/res/drawable/: ic_camera.xml  ic_camera_shutter.xml  ic_settings.xml
app/src/main/res/layout/: activity_camera.xml  camera_fragment.xml  fragment_progress_bar.xml  gallery_fragment.xml  info_activity.xml
app/src/main/res/layout-land/: camera_fragment.xml  fragment_progress_bar.xml
app/src/main/res/values/: colors.xml  settings.xml  strings.xml  styles.xml
app/src/main/res/values-it/: settings.xml  strings.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
